--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 # Site settings
 title: Timo Vos
-description: 'Web developer &middot; Backend developer'
+subtitle: 'Web developer &middot; Backend developer'
+description: 'PHP &middot; MySQL &middot; JavaScript &middot; jQuery &middot; CSS &middot; SASS &middot; SCSS'
+description2: 'WordPress &middot; Git &middot; Ubuntu &middot; PHPStorm &middot; TYPO3 &middot; Laravel'
 url: 'http://joshgerdes.com/jekyll-uno'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
