Change the order of the specialties

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Timo Vos
 subtitle: 'Web developer &middot; Backend developer'
 description: 'PHP &middot; MySQL &middot; JavaScript &middot; jQuery &middot; CSS &middot; SASS &middot; SCSS'
-description2: 'WordPress &middot; Git &middot; Ubuntu &middot; PHPStorm &middot; TYPO3 &middot; Laravel'
+description2: 'Laravel &middot; Git &middot; PHPStorm &middot; Ubuntu &middot; WordPress &middot; TYPO3'
 url: 'http://joshgerdes.com/jekyll-uno'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
